...
                onClick = { },
                backgroundColor = Color.Black
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    tint = Color.White,
                    contentDescription = "Add"
                )
            }
        },
        topBar = {
            TopAppBar(
                backgroundColor = Color.Transparent,
...
